add form to add and view course details
Co-authored-by: Sarah Reimann <reimannsarah45@gmail.com>
Co-authored-by: Thomas McDowell <tmcdowellddhs@yahoo.com>

--- a/OpalCollege/Views/Courses/Create.cshtml
+++ b/OpalCollege/Views/Courses/Create.cshtml
@@ -12,6 +12,9 @@
   @Html.LabelFor(model => model.Subject)
   @Html.TextBoxFor(model => model.Subject)
 
+  @Html.LabelFor(model => model.Level)
+  @Html.TextBoxFor(model => model.Level)
+
   @Html.LabelFor(model => model.Professor)
   @Html.TextBoxFor(model => model.Professor)
 
