--- a/OpalCollege/Views/Home/Index.cshtml
+++ b/OpalCollege/Views/Home/Index.cshtml
@@ -5,3 +5,4 @@
     <p>@Html.ActionLink("See all students", "Index", "Students")</p>
     <p>@Html.ActionLink("See all courses", "Index", "Courses")</p>
     <p>@Html.ActionLink("Add new Course", "Create", "Courses")</p>
+    <p>@Html.ActionLink("Add new Student", "Create", "Students")</p>
