--- a/OpalCollege/Views/Students/Index.cshtml
+++ b/OpalCollege/Views/Students/Index.cshtml
@@ -1,3 +1,15 @@
 @{
   Layout = "_Layout";
 }
+
+@using OpalCollege.Models
+
+@if (Model.Count == 0)
+{
+  <p>Add some students, please</p>
+}
+
+@foreach (Student student in Model)
+{
+  <p>@Html.ActionLink($"{student.Name}", "Details", new { id = student.StudentId})</p>
+}
