add edit to students
Co-authored-by: Sarah Reimann <reimannsarah45@gmail.com>
Co-authored-by: Thomas McDowell <tmcdowellddhs@yahoo.com>

--- a/OpalCollege/Views/Students/Details.cshtml
+++ b/OpalCollege/Views/Students/Details.cshtml
@@ -18,3 +18,5 @@
   <li>@Html.ActionLink($"{join.Course.Title}", "Details", "Courses", new { id = join.Course.CourseId})</li>
   
 }
+
+<p>@Html.ActionLink("Edit Student", "Edit", new { id = Model.StudentId })</p>
