--- a/OpalCollege/Views/Students/Index.cshtml
+++ b/OpalCollege/Views/Students/Index.cshtml
@@ -13,3 +13,5 @@
 {
   <p>@Html.ActionLink($"{student.Name}", "Details", new { id = student.StudentId})</p>
 }
+
+@Html.ActionLink("Register a student", "Create")
