--- a/OpalCollege/Views/Shared/_Layout.cshtml
+++ b/OpalCollege/Views/Shared/_Layout.cshtml
@@ -2,16 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>@ViewBag.PageTitle</title>
+    <title>Opal College Registrar</title>
     <link 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
       rel="stylesheet" 
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
       crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/styles.css">
-  </head>
-  <body>
-    @RenderBody()
-    @* @await Html.PartialAsync("Footer") *@
-  </body>
+</head>
+
+<body>
+  @await Html.PartialAsync("NavBar")
+  @RenderBody()
+</body>
+
 </html>
