--- a/OpalCollege/Views/Students/Details.cshtml
+++ b/OpalCollege/Views/Students/Details.cshtml
@@ -5,6 +5,7 @@
 @using OpalCollege.Models
 @model OpalCollege.Models.Student
 
+<h2>Studentdetaele</h2>
 
 <p>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</p>
 @if (Model.JoinEntities.Count == 0)
@@ -15,8 +16,19 @@
 
 @foreach (StudentCourse join in Model.JoinEntities)
 {
-  <li>@Html.ActionLink($"{join.Course.Title}", "Details", "Courses", new { id = join.Course.CourseId})</li>
+  <li>@Html.ActionLink($"{join.Course.Title}", "Details", "Courses", new { id = join.Course.CourseId})
+
+      @using (Html.BeginForm("DeleteJoin", "Students"))
+      {
+        @Html.Hidden("joinId", @join.StudentCourseId)
+        <input type="submit" value="Delete From Itinerary"/>
+      }
+  </li>
   
 }
 
 <p>@Html.ActionLink("Edit Student", "Edit", new { id = Model.StudentId })</p>
+<p>@Html.ActionLink("Delete Student", "Delete", new { id = Model.StudentId })</p>
+
+
+// WE LEFT OFF HERE //
