finish up delete functionality in student details view.
Co-authored-by Thomas McDowell <tmcdowellddhs@yahoo.com>
Co-authored-by Sarah Reimann <reimannsarah45@gmail.com>

--- a/OpalCollege/Views/Courses/Delete.cshtml
+++ b/OpalCollege/Views/Courses/Delete.cshtml
@@ -9,6 +9,7 @@
 @Html.DisplayNameFor(model => model.Title): @Html.DisplayFor(model => model.Title)
 @using (Html.BeginForm())
 {
+  @Html.HiddenFor(model => model.CourseId)
   <input type="submit" value="Delete" />
 }
 @Html.ActionLink("Back to List", "Index")
