use validation attributes to check user student input values
 Co-authored-by Thomas McDowell <tmcdowellddhs@yahoo.com>
dquote> Co-authored-by Sarah Reimann <reimannsarah45@gmail.com>

--- a/OpalCollege/Views/Students/Create.cshtml
+++ b/OpalCollege/Views/Students/Create.cshtml
@@ -4,6 +4,9 @@
 
 @model OpalCollege.Models.Student
 
+<p>@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger"})</p>
+<p>@Html.ValidationMessageFor(model => model.EnrollDate, "", new { @class = "text-danger"})</p>
+
 @using (Html.BeginForm())
 {
   @Html.LabelFor(model => model.Name)
