--- a/OpalCollege/Views/Courses/Create.cshtml
+++ b/OpalCollege/Views/Courses/Create.cshtml
@@ -9,8 +9,8 @@
   @Html.LabelFor(model => model.Title)
   @Html.TextBoxFor(model => model.Title)
 
-  @Html.LabelFor(model => model.Subject)
-  @Html.TextBoxFor(model => model.Subject)
+  @Html.LabelFor(model => model.Department)
+  @Html.TextBoxFor(model => model.Department)
 
   @Html.LabelFor(model => model.Level)
   @Html.TextBoxFor(model => model.Level)
