WIP further connecting Departments to other entities.
 Co-authored-by Thomas McDowell <tmcdowellddhs@yahoo.com>
dquote> Co-authored-by Sarah Reimann <reimannsarah45@gmail.com>

--- a/OpalCollege/Views/Courses/Details.cshtml
+++ b/OpalCollege/Views/Courses/Details.cshtml
@@ -10,7 +10,7 @@ You want details? I'LL GIVE YOU DETAILS
 @* <h3>@Html.DisplayNameFor(model => model.Title): @Html.DisplayFor(model = model.Title)</h3> *@
 
 <p>Course Title: @Model.Title</p>
-<p>Subject: @Model.Subject</p>
+<p>Subject: @Model.Department</p>
 <p>Level: @Model.Level</p>
 <p>Professor: @Model.Professor</p>
 
