--- a/OpalCollege/Views/Home/Index.cshtml
+++ b/OpalCollege/Views/Home/Index.cshtml
@@ -4,5 +4,7 @@
     <h1>Welcome to Opal College Registrar!</h1>
     <p>@Html.ActionLink("See all students", "Index", "Students")</p>
     <p>@Html.ActionLink("See all courses", "Index", "Courses")</p>
+    <p>@Html.ActionLink("See all departments", "Index", "Departments")</p>
     <p>@Html.ActionLink("Add new Course", "Create", "Courses")</p>
     <p>@Html.ActionLink("Add new Student", "Create", "Students")</p>
+    <p>@Html.ActionLink("Add new Department", "Create", "Departments")</p>
