--- a/OpalCollege/Views/Shared/NavBar.cshtml
+++ b/OpalCollege/Views/Shared/NavBar.cshtml
@@ -1,5 +1,6 @@
 <div id="navbar">
   <p>@Html.ActionLink("Home", "Index", "Home", null, new { @class="btn" })</p>
+  <p>@Html.ActionLink("Departments", "Index", "Departments", null, new { @class="btn" })</p>
   <p>@Html.ActionLink("Courses", "Index", "Courses", null, new { @class="btn" })</p>
   <p>@Html.ActionLink("Students", "Index", "Students", null, new { @class="btn" })</p>
 </div>
