went on an adventure. Finally added department bs.

--- a/OpalCollege/Views/Departments/Details.cshtml
+++ b/OpalCollege/Views/Departments/Details.cshtml
@@ -9,7 +9,7 @@ Department Details:
 
 <h3>@Html.DisplayNameFor(model => model.Subject): @Html.DisplayFor(model => model.Subject)</h3>
 
-@if (Model.JoinCourses.Count == 0)
+@* @if (Model.JoinCourses.Count == 0)
 {
   <p>This Department has no Courses.</p>
 }
@@ -28,4 +28,4 @@ else
     </li>
   }
   </ul>
-}
+} *@
