--- a/OpalCollege/Views/Departments/Details.cshtml
+++ b/OpalCollege/Views/Departments/Details.cshtml
@@ -1,5 +1,6 @@
 @{
   Layout = "_Layout";
+  List<Course> allCourses = ViewBag.thisDeptsCourses;
 }
 
 @using OpalCollege.Models
@@ -9,23 +10,12 @@ Department Details:
 
 <h3>@Html.DisplayNameFor(model => model.Subject): @Html.DisplayFor(model => model.Subject)</h3>
 
-@* @if (Model.JoinCourses.Count == 0)
+
+@foreach (Course course in allCourses)
 {
-  <p>This Department has no Courses.</p>
+  <p>@Html.ActionLink($"{course.Title}", "Details", new { id = course.CourseId })</p>
 }
-else
-{
-  <h4>Courses in this Department:</h4>
-  <ul>
-  @foreach (DepartmentCourse join in Model.JoinCourses)
-  {
-    <li>@Html.ActionLink($"{join.Course.Title}", "Details", "Courses", new { id = join.Course.CourseId})
-      @using (Html.BeginForm("DeleteJoin", "Courses"))
-      {
-        @Html.Hidden("joinId", @join.DepartmentCourseId)
-        <input type="submit" value="Remove Course from Department"/>
-      }
-    </li>
-  }
-  </ul>
-} *@
+@Html.ActionLink("Add course to this department", "Create", "Courses")
+<br>
+@Html.ActionLink("Edit this department", "Edit", new { id = Model.DepartmentId })
+
