add edit functionality to Department
 Co-authored-by Thomas McDowell <tmcdowellddhs@yahoo.com>
dquote> Co-authored-by Sarah Reimann <reimannsarah45@gmail.com>

--- a/OpalCollege/Views/Departments/Details.cshtml
+++ b/OpalCollege/Views/Departments/Details.cshtml
@@ -13,7 +13,7 @@ Department Details:
 
 @foreach (Course course in allCourses)
 {
-  <p>@Html.ActionLink($"{course.Title}", "Details", new { id = course.CourseId })</p>
+  <p>@Html.ActionLink($"{course.Title}", "Details", "Courses", new { id = course.CourseId })</p>
 }
 @Html.ActionLink("Add course to this department", "Create", "Courses")
 <br>
