add delete functionality to Departments
 Co-authored-by Thomas McDowell <tmcdowellddhs@yahoo.com>
dquote> Co-authored-by Sarah Reimann <reimannsarah45@gmail.com>

--- a/OpalCollege/Views/Departments/Details.cshtml
+++ b/OpalCollege/Views/Departments/Details.cshtml
@@ -18,4 +18,5 @@ Department Details:
 @Html.ActionLink("Add course to this department", "Create", "Courses")
 <br>
 @Html.ActionLink("Edit this department", "Edit", new { id = Model.DepartmentId })
+@Html.ActionLink("Delete this department", "Delete", new { id = Model.DepartmentId })
 
