add departments to courses index view.
 Co-authored-by Thomas McDowell <tmcdowellddhs@yahoo.com>
dquote> Co-authored-by Sarah Reimann <reimannsarah45@gmail.com>

--- a/OpalCollege/Views/Courses/Index.cshtml
+++ b/OpalCollege/Views/Courses/Index.cshtml
@@ -13,7 +13,7 @@
 @foreach (Course course in Model)
 {
   <p>@course.Title</p>
-  <p>@Html.ActionLink("Course Details", "Details", new { id = course.CourseId })</p>
+  <p>@Html.ActionLink("Course Details", "Details", new { id = course.CourseId }) / <Label>Department:</Label> @Html.ActionLink($"{course.Department.Subject}", "Details", "Departments", new { id = course.DepartmentId})</p>
 }
 
 @Html.ActionLink("Add Course", "Create")
