--- a/OpalCollege/Views/Departments/Details.cshtml
+++ b/OpalCollege/Views/Departments/Details.cshtml
@@ -1,6 +1,7 @@
 @{
   Layout = "_Layout";
   List<Course> allCourses = ViewBag.thisDeptsCourses;
+  List<Student> allStudents = ViewBag.thisDeptsStudents;
 }
 
 @using OpalCollege.Models
@@ -10,13 +11,24 @@ Department Details:
 
 <h3>@Html.DisplayNameFor(model => model.Subject): @Html.DisplayFor(model => model.Subject)</h3>
 
-
+<label>Courses in this Department:</label>
 @foreach (Course course in allCourses)
 {
   <p>@Html.ActionLink($"{course.Title}", "Details", "Courses", new { id = course.CourseId })</p>
 }
+  <ul><label>Students in this Department:</label>
+@foreach (Student student in allStudents)
+{
+
+    <li>
+    @Html.ActionLink($"{student.Name}", "Details", "Students", new { id = student.StudentId })
+    </li>
+
+}
+</ul>
 @Html.ActionLink("Add course to this department", "Create", "Courses")
 <br>
 @Html.ActionLink("Edit this department", "Edit", new { id = Model.DepartmentId })
+<br>
 @Html.ActionLink("Delete this department", "Delete", new { id = Model.DepartmentId })
 
