--- a/OpalCollege/Views/Students/Details.cshtml
+++ b/OpalCollege/Views/Students/Details.cshtml
@@ -1,14 +1,17 @@
 @{
   Layout = "_Layout";
+  
 }
+<hr />
 
 @using OpalCollege.Models
 @model OpalCollege.Models.Student
 
-<h2>Studentdetaele</h2>
+<h2>Student Details:</h2>
 
 <p>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</p>
 <p><label>Major:</label> @Model.Department.Subject</p>
+<p><label>Classes:</label></p>
 @if (Model.JoinEntities.Count == 0)
 {
   <p>No courses added yet</p>
@@ -27,11 +30,8 @@
   </li>
   
 }
+<br>
 
 <p>@Html.ActionLink("Add Courses", "AddCourse", new { id = Model.StudentId})</p>
 <p>@Html.ActionLink("Edit Student", "Edit", new { id = Model.StudentId })</p>
 <p>@Html.ActionLink("Delete Student", "Delete", new { id = Model.StudentId })</p>
-
-
-
-// WE LEFT OFF HERE //
