add headers to various views.
 Co-authored-by Thomas McDowell <tmcdowellddhs@yahoo.com>
dquote> Co-authored-by Sarah Reimann <reimannsarah45@gmail.com>

--- a/OpalCollege/Views/Courses/Details.cshtml
+++ b/OpalCollege/Views/Courses/Details.cshtml
@@ -3,11 +3,8 @@
 }
 <hr />
 @using OpalCollege.Models
-@* @model OpalCollege.Models.Course *@
 
-You want details? I'LL GIVE YOU DETAILS
-
-@* <h3>@Html.DisplayNameFor(model => model.Title): @Html.DisplayFor(model = model.Title)</h3> *@
+<h2>Course Details</h2>
 
 <p>Course Title: @Model.Title</p>
 <p>Subject: @Model.Department.Subject</p>
