--- a/OpalCollege/Views/Departments/Details.cshtml
+++ b/OpalCollege/Views/Departments/Details.cshtml
@@ -8,7 +8,7 @@
 @using OpalCollege.Models
 @model OpalCollege.Models.Department
 
-Department Details:
+<h2>Department Details:</h2>
 
 <h3>@Html.DisplayNameFor(model => model.Subject): @Html.DisplayFor(model => model.Subject)</h3>
 
