--- a/OpalCollege/Views/Students/Create.cshtml
+++ b/OpalCollege/Views/Students/Create.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 <hr />
-
+<h2>Add Student</h2>
 @model OpalCollege.Models.Student
 
 <p>@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger"})</p>
