update README and validation checks for student

--- a/OpalCollege/Views/Shared/_Layout.cshtml
+++ b/OpalCollege/Views/Shared/_Layout.cshtml
@@ -13,7 +13,9 @@
 
 <body>
   @await Html.PartialAsync("NavBar")
-  @RenderBody()
+  <div class="main">
+    @RenderBody()
+  </div>
 </body>
 
 </html>
