--- a/OpalCollege/Views/Shared/_Layout.cshtml
+++ b/OpalCollege/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  @await Html.PartialAsync("Header")
   @await Html.PartialAsync("NavBar")
   <div class="main">
     @RenderBody()
